...
    
    /// Email text field
    lazy var passwordTextField: TCBTextField = {
        let textField = TCBTextField()
        
        textField.isSecureTextEntry = true
        textField.placeholder = "Password"
        textField.inactiveLineColor = .lightGray
        textField.activeLineColor = .lightGray
        textField.activePlaceholderTextColor = .gray
        textField.inactivePlaceholderTextColor = .gray
        textField.errorLineColor = .red
        textField.autocapitalizationType = .none
...
        title = "Log in"
        super.viewDidLoad()
        setupBinding()
        
        // TODO: - Temp to retrive profile
        viewModel.getProfile()
        view.accessibilityIdentifier = "LoginViewController"
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        navigationController?.setNavigationBarHidden(false, animated: true)
    }
...
