...
        titleLabel.font = .boldFont(18)
        
        navigationItem.titleView = titleLabel
        
        if let nav = navigationController, nav.viewControllers.count > 1 {
            let backButton = UIButton(type: .custom)
            backButton.setImage(UIImage(named: "backArrow"), for: .normal)
            backButton.frame = CGRect(x: 0, y: 0, width: 44, height: 44)
            backButton.addTarget(self, action: #selector(onBack), for: .touchUpInside)
            backButton.contentHorizontalAlignment = .left
            
            navigationItem.leftBarButtonItems = [UIBarButtonItem.init(customView: backButton)]
        }
...
