...
    }()
    
    /// Login button
    lazy var loginButton: UIButton = {
        let button = UIButton()
        
        button.setTitle("Sign In", for: .normal)
        button.titleLabel?.textAlignment = .center
        button.titleLabel?.font = UIFont.buttonTextFont
        button.setTitleColor(.white, for: .normal)
        button.layer.cornerRadius = 13
        button.layer.masksToBounds = true
        button.backgroundColor = UIColor.darkGray
...
